@@ -563,11 +563,7 @@ public int [] getWrapIndices () {
   ArrayList wrapIndiceList = new ArrayList();
   for(int i=1; i<components.length; i++) {
     if(((JCoolBarItem)components[i]).isWrapped()) {
-      if(Compatibility.IS_JAVA_5_OR_GREATER) {
-        wrapIndiceList.add(Integer.valueOf(i));
-      } else {
-        wrapIndiceList.add(new Integer(i));
-      }
+    	wrapIndiceList.add(Integer.valueOf(i));
     }
   }
   int[] indices = new int[wrapIndiceList.size()];
